fix dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -65,7 +65,6 @@ html {
 body {
   position: relative;
   width: 100%;
-  color: #444444;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu,
     "Helvetica Neue", sans-serif;
 }
